--- a/package.json
+++ b/package.json
@@ -2,13 +2,22 @@
   "name": "todolist",
   "version": "1.0.0",
   "description": "",
-  "main": "script.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/shariq553/chatappp.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/shariq553/chatappp/issues"
+  },
+  "homepage": "https://github.com/shariq553/chatappp#readme",
   "dependencies": {
     "express": "^5.1.0",
     "socket.io": "^4.8.1",
